        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=10996
        WebKit needs (possibly private) XML/SVG innerText support (for DumpRenderTree)

        Create an internal method to create innerText functionality for non-HTML
        nodes. When called from DRT this omits CDATA nodes.



Canonical link: https://commits.webkit.org/15222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18134 268f45cc-cd09-0410-ab3c-d52691b4dbfc