WebCore/html/HTMLElement.cpp
@@ -220,26 +220,6 @@ String HTMLElement::outerHTML() const
     return createMarkup(this);
 }
 
-String HTMLElement::innerText() const
-{
-    if (!renderer())
-        return textContent(true);
-    
-    // We need to update layout, since plainText uses line boxes in the render tree.
-    document()->updateLayoutIgnorePendingStylesheets();
-    return plainText(rangeOfContents(const_cast<HTMLElement *>(this)).get());
-}
-
-String HTMLElement::outerText() const
-{
-    // Getting outerText is the same as getting innerText, only
-    // setting is different. You would think this should get the plain
-    // text for the outer range, but this is wrong, <br> for instance
-    // would return different values for inner and outer text by such
-    // a rule, but it doesn't in WinIE, and we want to match that.
-    return innerText();
-}
-
 PassRefPtr<DocumentFragment> HTMLElement::createContextualFragment(const String &html)
 {
     // the following is in accordance with the definition as used by IE
